Fix: Hotfix Categories page content overflow issue

--- a/src/pages/Categories/index.scss
+++ b/src/pages/Categories/index.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100dvh;
+  min-height: 100dvh;
+  height: 100%;
   background-color: $color-white;
   color: $color-primary;
   position: relative;
